Add variables for rabbitmq ssl configuration
Change-Id: I4ca1b85b67a6f6fd4f951c1cb3c256ec959e7ee4

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -120,6 +120,8 @@ blazar_oslomsg_rpc_port: "{{ oslomsg_rpc_port | default('5672') }}"
 blazar_oslomsg_rpc_use_ssl: "{{ oslomsg_rpc_use_ssl | default(False) }}"
 blazar_oslomsg_rpc_userid: blazar
 blazar_oslomsg_rpc_vhost: /blazar
+blazar_oslomsg_rpc_ssl_version: "{{ oslomsg_rpc_ssl_version | default('TLSv1_2') }}"
+blazar_oslomsg_rpc_ssl_ca_file: "{{ oslomsg_rpc_ssl_ca_file | default('') }}"
 
 # Notify
 blazar_oslomsg_notify_host_group: "{{ oslomsg_notify_host_group | default('rabbitmq_all') }}"
@@ -131,6 +133,8 @@ blazar_oslomsg_notify_use_ssl: "{{ oslomsg_notify_use_ssl | default(False) }}"
 blazar_oslomsg_notify_userid: "{{ blazar_oslomsg_rpc_userid }}"
 blazar_oslomsg_notify_vhost: "{{ blazar_oslomsg_rpc_vhost }}"
 blazar_oslomsg_notify_password: "{{ blazar_oslomsg_rpc_password }}"
+blazar_oslomsg_notify_ssl_version: "{{ oslomsg_notify_ssl_version | default('TLSv1_2') }}"
+blazar_oslomsg_notify_ssl_ca_file: "{{ oslomsg_notify_ssl_ca_file | default('') }}"
 
 blazar_role_name: admin
 blazar_bind_address: "{{ openstack_service_bind_address | default('0.0.0.0') }}"
