--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-minversion = 3.1
+minversion = 3.18.0
 skipsdist = True
 envlist = docs,linters,functional
 ignore_basepython_conflict = True
@@ -20,7 +20,7 @@ passenv =
     HTTPS_PROXY
     no_proxy
     NO_PROXY
-whitelist_externals =
+allowlist_externals =
     bash
 setenv =
     PYTHONUNBUFFERED=1
@@ -38,7 +38,7 @@ commands =
 
 [testenv:pdf-docs]
 deps = {[testenv:docs]deps}
-whitelist_externals =
+allowlist_externals =
   make
 commands =
   sphinx-build --keep-going -b latex doc/source doc/build/pdf
