--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -64,7 +64,7 @@ blazar_galera_address: "{{ galera_address | default('127.0.0.1') }}"
 blazar_galera_database: blazar
 blazar_galera_user: blazar
 blazar_galera_use_ssl: "{{ galera_use_ssl | default(False) }}"
-blazar_galera_ssl_ca_cert: "{{ galera_ssl_ca_cert | default('/etc/ssl/certs/galera-ca.pem') }}"
+blazar_galera_ssl_ca_cert: "{{ galera_ssl_ca_cert | default('') }}"
 blazar_galera_port: "{{ galera_port | default('3306') }}"
 
 ## Service Type and Data
