Use config_template as a collection
Since we still use ceph-ansible that has their own implementation of
config_template module it's worth to use mentioned module as a collection
explicitly.

Depends-On: https://review.opendev.org/c/openstack/openstack-ansible/+/819814



Change-Id: I8abcf60dcc8a264c221de89ff01906edf3ce8a39

--- a/tasks/blazar_post_install.yml
+++ b/tasks/blazar_post_install.yml
@@ -15,7 +15,7 @@
 # limitations under the License.
 
 - name: Deploy configuration files
-  config_template:
+  openstack.config_template.config_template:
     src: "{{ item.src | default(omit) }}"
     dest: "{{ item.dest }}"
     owner: "root"
