--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -66,6 +66,10 @@ blazar_galera_user: blazar
 blazar_galera_use_ssl: "{{ galera_use_ssl | default(False) }}"
 blazar_galera_ssl_ca_cert: "{{ galera_ssl_ca_cert | default('') }}"
 blazar_galera_port: "{{ galera_port | default('3306') }}"
+blazar_db_max_overflow: "{{ openstack_db_max_overflow | default('50') }}"
+blazar_db_max_pool_size: "{{ openstack_db_max_pool_size | default('5') }}"
+blazar_db_pool_timeout: "{{ openstack_db_pool_timeout | default('30') }}"
+blazar_db_connection_recycle_time: "{{ openstack_db_connection_recycle_time | default('600') }}"
 
 ## Service Type and Data
 blazar_service_name: blazar
