Use common service setup tasks from a collection rather than in-role
Change-Id: Ib6b44ea47b092463994f1a44e70113cad1d00687

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,7 +26,12 @@
   tags:
     - always
 
-- import_tasks: db_setup.yml
+- include_role:
+    name: openstack.osa.db_setup
+    apply:
+      tags:
+        - common-db
+        - blazar-config
   when:
     - _blazar_is_first_play_host
   vars:
@@ -40,10 +45,14 @@
           - username: "{{ blazar_galera_user }}"
             password: "{{ blazar_container_mysql_password }}"
   tags:
-    - common-db
-    - blazar-config
+    - always
 
-- import_tasks: mq_setup.yml
+- include_role:
+    name: openstack.osa.mq_setup
+    apply:
+      tags:
+        - common-mq
+        - blazar-config
   when:
     - _blazar_is_first_play_host
   vars:
@@ -58,8 +67,7 @@
     _oslomsg_notify_vhost: "{{ blazar_oslomsg_notify_vhost }}"
     _oslomsg_notify_transport: "{{ blazar_oslomsg_notify_transport }}"
   tags:
-    - common-mq
-    - blazar-config
+    - always
 
 - import_tasks: blazar_pre_install.yml
   tags:
@@ -110,7 +118,12 @@
     - blazar-config
     - systemd-service
 
-- import_tasks: service_setup.yml
+- include_role:
+    name: openstack.osa.service_setup
+    apply:
+      tags:
+        - common-service
+        - blazar-config
   vars:
     _service_adminuri_insecure: "{{ keystone_service_adminuri_insecure }}"
     _service_in_ldap: "{{ blazar_service_in_ldap }}"
@@ -139,4 +152,4 @@
   when:
     - _blazar_is_first_play_host
   tags:
-    - blazar-config
+    - always
