Support service tokens
Implement support for service_tokens. For that we convert
role_name to be a list along with renaming corresponding variable.

Additionally service_type is defined now for keystone_authtoken which
enables to validate tokens with restricted access rules

Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-plugins/+/845690
Change-Id: I3a1c2d87a39eaf342411f3b607bc909f924944cb

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -108,6 +108,12 @@ blazar_service_project_domain_id: default
 blazar_service_project_name: service
 blazar_service_user_domain_id: default
 blazar_service_user_name: blazar
+blazar_service_role_names:
+  - admin
+  - service
+blazar_service_token_roles:
+  - service
+blazar_service_token_roles_required: "{{ openstack_service_token_roles_required | default(True) }}"
 blazar_keystone_auth_plugin: password
 
 blazar_service_in_ldap: "{{ service_ldap_backend_enabled | default(False) }}"
@@ -140,7 +146,6 @@ blazar_oslomsg_notify_password: "{{ blazar_oslomsg_rpc_password }}"
 blazar_oslomsg_notify_ssl_version: "{{ oslomsg_notify_ssl_version | default('TLSv1_2') }}"
 blazar_oslomsg_notify_ssl_ca_file: "{{ oslomsg_notify_ssl_ca_file | default('') }}"
 
-blazar_role_name: admin
 blazar_bind_address: "{{ openstack_service_bind_address | default('0.0.0.0') }}"
 blazar_service_port: 1234
 blazar_program_name: blazar-server
