Add uWSGI support to blazar
This patch adds uWSGI support to os_blazar role. All openstack services
should stay behind uWSGI.

It's also required for upcoming TLS backend feature. Blazar does not
have native TLS support so it needs to be handled by uWSGI.

Change-Id: I65511de4d5014a28f0f91536f9dbaf96fcb8e7a2

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -103,6 +103,16 @@
   tags:
     - blazar-config
 
+- name: Import uwsgi role
+  import_role:
+    name: uwsgi
+  vars:
+    uwsgi_services: "{{ uwsgi_blazar_services }}"
+    uwsgi_install_method: "source"
+  tags:
+    - blazar-config
+    - uwsgi
+
 - name: Run the systemd service role
   import_role:
     name: systemd_service
