--- a/vars/main.yml
+++ b/vars/main.yml
@@ -25,7 +25,8 @@ filtered_blazar_services: |-
   {% for key, value in blazar_services.items() %}
   {%   if (value['group'] in group_names) and
           (('condition' not in value) or
-           ('condition' in value and value['condition'])) %}
+           ('condition' in value and value['condition'])) and
+           not ('wsgi_app' in value and value['wsgi_app']) %}
   {%     set _ = value.update(
            {
              'service_key': key,
@@ -40,3 +41,24 @@ filtered_blazar_services: |-
   {%   endif %}
   {% endfor %}
   {{ services | sort(attribute='start_order') }}
+
+uwsgi_blazar_services: |-
+  {% set services = {} %}
+  {% for key, value in blazar_services.items() %}
+  {%   if (value['group'] in group_names) and
+         (('condition' not in value) or ('condition' in value and value['condition']))
+         and ('wsgi_app' in value and value['wsgi_app']) %}
+  {%     set _ = value.update(
+            {
+             'wsgi_path':  blazar_bin ~ '/' ~ value.wsgi_name,
+             'wsgi_venv': "{{ blazar_bin | dirname }}",
+             'uwsgi_uid': blazar_system_user_name,
+             'uwsgi_guid': blazar_system_group_name,
+             'uwsgi_processes': blazar_wsgi_processes,
+             'uwsgi_threads': blazar_wsgi_threads
+           }
+         ) %}
+  {%     set _ = services.update({key: value}) %}
+  {%   endif %}
+  {% endfor %}
+  {{ services }}
