--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -93,15 +93,25 @@ blazar_services:
   blazar-api:
     group: blazar_all
     service_name: blazar-api
-    execstarts: "{{ blazar_bin }}/blazar-api {{ blazar_config_option }}"
     init_config_overrides: "{{ blazar_api_init_config_overrides }}"
     start_order: 1
+    wsgi_app: True
+    wsgi_name: blazar-api-wsgi
+    uwsgi_port: "{{ blazar_service_port }}"
+    uwsgi_bind_address: "{{ blazar_bind_address }}"
+    uwsgi_overrides: "{{ blazar_api_uwsgi_ini_overrides }}"
   blazar-manager:
     group: blazar_all
     service_name: blazar-manager
     execstarts: "{{ blazar_bin }}/blazar-manager {{ blazar_config_option }}"
     init_config_overrides: "{{ blazar_manager_init_config_overrides }}"
     start_order: 2
+
+# Blazar uWSGI settings
+blazar_wsgi_processes_max: 16
+blazar_wsgi_processes: "{{ [[(ansible_facts['processor_vcpus']//ansible_facts['processor_threads_per_core'])|default(1), 1] | max * 2, blazar_wsgi_processes_max] | min }}"
+blazar_wsgi_threads: 1
+blazar_wsgi_buffer_size: 65535
 
 ## Keystone
 blazar_service_project_domain_id: default
@@ -156,3 +166,4 @@ blazar_policy_overrides: {}
 blazar_blazar_conf_overrides: {}
 blazar_api_init_config_overrides: {}
 blazar_manager_init_config_overrides: {}
+blazar_api_uwsgi_ini_overrides: {}
