Fix linters and metadata
With update of ansible-lint to version >=6.0.0 a lot of new
linters were added, that enabled by default. In order to comply
with linter rules we're applying changes to the role.

With that we also update metdata to reflect current state.

Depends-On: https://review.opendev.org/c/openstack/ansible-role-systemd_service/+/888223
Change-Id: Ic97b301d704d3bc19142315a69724c05f3cad875

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,13 +18,18 @@
 # for the service setup. The host must already have
 # clouds.yaml properly configured.
 blazar_service_setup_host: "{{ openstack_service_setup_host | default('localhost') }}"
-blazar_service_setup_host_python_interpreter: "{{ openstack_service_setup_host_python_interpreter | default((blazar_service_setup_host == 'localhost') | ternary(ansible_playbook_python, ansible_facts['python']['executable'])) }}"
+blazar_service_setup_host_python_interpreter: >-
+  {{
+    openstack_service_setup_host_python_interpreter | default(
+      (blazar_service_setup_host == 'localhost') | ternary(ansible_playbook_python, ansible_facts['python']['executable']))
+  }}
 
 blazar_package_state: "{{ package_state | default('latest') }}"
 
 blazar_git_repo: https://opendev.org/openstack/blazar
 blazar_git_install_branch: master
-blazar_upper_constraints_url: "{{ requirements_git_url | default('https://releases.openstack.org/constraints/upper/' ~ requirements_git_install_branch | default('master')) }}"
+blazar_upper_constraints_url: >-
+  {{ requirements_git_url | default('https://releases.openstack.org/constraints/upper/' ~ requirements_git_install_branch | default('master')) }}
 
 # Enable/Disable Ceilometer
 blazar_ceilometer_enabled: "{{ (groups['ceilometer_all'] is defined) and (groups['ceilometer_all'] | length > 0) }}"
@@ -59,7 +64,11 @@ blazar_system_user_home: "/var/lib/{{ blazar_system_user_name }}"
 
 ## Database credentials
 blazar_db_setup_host: "{{ openstack_db_setup_host | default('localhost') }}"
-blazar_db_setup_python_interpreter: "{{ openstack_db_setup_python_interpreter | default((blazar_db_setup_host == 'localhost') | ternary(ansible_playbook_python, ansible_facts['python']['executable'])) }}"
+blazar_db_setup_python_interpreter: >-
+  {{
+    openstack_db_setup_python_interpreter | default(
+    (blazar_db_setup_host == 'localhost') | ternary(ansible_playbook_python, ansible_facts['python']['executable']))
+  }}
 blazar_galera_address: "{{ galera_address | default('127.0.0.1') }}"
 blazar_galera_database: blazar
 blazar_galera_user: blazar
@@ -110,7 +119,8 @@ blazar_services:
 
 # Blazar uWSGI settings
 blazar_wsgi_processes_max: 16
-blazar_wsgi_processes: "{{ [[(ansible_facts['processor_vcpus']//ansible_facts['processor_threads_per_core'])|default(1), 1] | max * 2, blazar_wsgi_processes_max] | min }}"
+blazar_wsgi_processes: >-
+  {{ [[(ansible_facts['processor_vcpus'] // ansible_facts['processor_threads_per_core']) | default(1), 1] | max * 2, blazar_wsgi_processes_max] | min }}
 blazar_wsgi_threads: 1
 blazar_wsgi_buffer_size: 65535
 blazar_uwsgi_tls:
@@ -217,5 +227,5 @@ blazar_pki_install_certificates:
     mode: "0600"
 
 # Define user-provided SSL certificates
-#blazar_user_ssl_cert: <path to cert on ansible deployment host>
-#blazar_user_ssl_key: <path to cert on ansible deployment host>
+# blazar_user_ssl_cert: <path to cert on ansible deployment host>
+# blazar_user_ssl_key: <path to cert on ansible deployment host>
