--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -29,7 +29,8 @@
   tags:
     - always
 
-- include_role:
+- name: Including osa.db_setup role
+  include_role:
     name: openstack.osa.db_setup
     apply:
       tags:
@@ -50,7 +51,8 @@
   tags:
     - always
 
-- include_role:
+- name: Including osa.mq_setup role
+  include_role:
     name: openstack.osa.mq_setup
     apply:
       tags:
@@ -72,7 +74,8 @@
   tags:
     - always
 
-- import_tasks: blazar_pre_install.yml
+- name: Importing blazar_pre_install tasks
+  import_tasks: blazar_pre_install.yml
   tags:
     - blazar-install
 
@@ -113,11 +116,13 @@
   tags:
     - blazar-install
 
-- import_tasks: blazar_post_install.yml
+- name: Importing blazar_post_install tasks
+  import_tasks: blazar_post_install.yml
   tags:
     - blazar-config
 
-- import_tasks: blazar_db_setup.yml
+- name: Importing blazar_db_setup tasks
+  import_tasks: blazar_db_setup.yml
   when:
     - _blazar_is_first_play_host
   tags:
@@ -142,16 +147,17 @@
     systemd_tempd_prefix: openstack
     systemd_slice_name: blazar
     systemd_lock_path: /var/lock/blazar
-    systemd_CPUAccounting: true
-    systemd_BlockIOAccounting: true
-    systemd_MemoryAccounting: true
-    systemd_TasksAccounting: true
+    systemd_service_cpu_accounting: true
+    systemd_service_block_io_accounting: true
+    systemd_service_memory_accounting: true
+    systemd_service_tasks_accounting: true
     systemd_services: "{{ filtered_blazar_services }}"
   tags:
     - blazar-config
     - systemd-service
 
-- include_role:
+- name: Including osa.service_setup role
+  include_role:
     name: openstack.osa.service_setup
     apply:
       tags:
