--- a/meta/main.yml
+++ b/meta/main.yml
@@ -17,19 +17,23 @@
 
 galaxy_info:
   author: Taseer Ahmed
-  email: taseer94@gmail.com
   description: Blazar deployment with OpenStack Ansible
+  role_name: os_blazar
+  namespace: openstack
   company: Independent
   license: Apache2
-  min_ansible_version: 2.3
+  min_ansible_version: "2.10"
   platforms:
-  - name: Debian
-    versions:
-      - buster
-  - name: Ubuntu
-    versions:
-      - bionic
-      - focal
+    - name: Debian
+      versions:
+        - bullseye
+    - name: Ubuntu
+      versions:
+        - focal
+        - jammy
+    - name: EL
+      versions:
+        - "9"
   galaxy_tags:
     - cloud
     - python
