--- a/vars/main.yml
+++ b/vars/main.yml
@@ -19,6 +19,18 @@ _blazar_is_first_play_host: >-
       inventory_hostname == ((groups[blazar_services['blazar-api']['group']] | intersect(ansible_play_hosts)) | list)[0]) | bool
   }}
 
+_blazar_oslomsg_rpc_vhost_conf: >-
+  {{
+    (blazar_oslomsg_rpc_vhost is string) | ternary(blazar_oslomsg_rpc_vhost, blazar_oslomsg_rpc_vhost | selectattr(
+      'state', 'eq', 'present') | map(attribute='name') | first)
+  }}
+
+_blazar_oslomsg_notify_vhost_conf: >-
+  {{
+    (blazar_oslomsg_notify_vhost is string) | ternary(blazar_oslomsg_notify_vhost, blazar_oslomsg_notify_vhost | selectattr(
+      'state', 'eq', 'present') | map(attribute='name') | first)
+  }}
+
 #
 # Compile a list of the services on a host based on whether
 # the host is in the host group and the service is enabled.
