--- a/examples/playbook.yml
+++ b/examples/playbook.yml
@@ -3,4 +3,6 @@
   hosts: blazar_all
   user: root
   roles:
-    - { role: "os_blazar", tags: [ "os-blazar" ] }
+    - role: os_blazar
+      tags:
+        - os-blazar
