--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -86,11 +86,11 @@ blazar_service_region: "{{ service_region | default('RegionOne') }}"
 blazar_service_proto: http
 blazar_service_type: reservation
 blazar_service_description: "blazar service"
-blazar_service_publicuri: "{{ blazar_service_publicuri_proto }}://{{ external_lb_vip_address }}:{{ blazar_service_port }}"
+blazar_service_publicuri: "{{ blazar_service_publicuri_proto }}://{{ external_lb_vip_address }}:{{ blazar_service_port }}/v1"
 blazar_service_publicurl: "{{ blazar_service_publicuri }}"
-blazar_service_internaluri: "{{ blazar_service_internaluri_proto }}://{{ internal_lb_vip_address }}:{{ blazar_service_port }}"
+blazar_service_internaluri: "{{ blazar_service_internaluri_proto }}://{{ internal_lb_vip_address }}:{{ blazar_service_port }}/v1"
 blazar_service_internalurl: "{{ blazar_service_internaluri }}"
-blazar_service_adminuri: "{{ blazar_service_adminuri_proto }}://{{ internal_lb_vip_address }}:{{ blazar_service_port }}"
+blazar_service_adminuri: "{{ blazar_service_adminuri_proto }}://{{ internal_lb_vip_address }}:{{ blazar_service_port }}/v1"
 blazar_service_adminurl: "{{ blazar_service_adminuri }}"
 blazar_service_registry_proto: "{{ blazar_service_proto }}"
 blazar_service_publicuri_proto: "{{ openstack_service_publicuri_proto | default(blazar_service_proto) }}"
