Create required freepool aggregate
For normal functioning of Blazar reservation it expects a nova agregate exist
to be used for host reservation.

Thus, to make deployment more convenient for deployer we add fuctionality
of creating such aggregate.

Depends-On: https://review.opendev.org/c/openstack/openstack-ansible/+/904786
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-plugins/+/878794
Change-Id: I7f56b8c8f2394d5fae1476441c8e2e2a5f07467c

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -39,8 +39,12 @@ blazar_pip_install_args: "{{ pip_install_options | default('') }}"
 blazar_venv_tag: "{{ venv_tag | default('untagged') }}"
 blazar_bin: "/openstack/venvs/blazar-{{ blazar_venv_tag }}/bin"
 
+# Blazar configuration
+
 blazar_etc_dir: /etc/blazar
 blazar_config_option: "--config-file {{ blazar_etc_dir }}/blazar.conf"
+
+blazar_nova_aggregate_name: freepool
 
 ## Common PIP requirements
 blazar_pip_packages:
