Add variable to define list of manager plugins
In order to be more flexible regarding required plugins, we implement a
new variable that will allow to set a list of enabled filters for blazar.

With that we also enable floatingip plugin that has been added to Blazar
a while ago.

Change-Id: Iaff9284eec3a57a6470afb5e912cad17970baa2f

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -45,6 +45,10 @@ blazar_etc_dir: /etc/blazar
 blazar_config_option: "--config-file {{ blazar_etc_dir }}/blazar.conf"
 
 blazar_nova_aggregate_name: freepool
+blazar_manager_plugins:
+  - physical.host.plugin
+  - virtual.instance.plugin
+  - virtual.floatingip.plugin
 
 ## Common PIP requirements
 blazar_pip_packages:
