Enabled memcached usage for token caching
As of today blazar warns out on startup that using the in-process token
cache is deprecated for quite a while. In order to get rid of this warning
we add memcached configuration for keystone token.

Change-Id: Ibd80231bdb1dfe2e66e69c4538a2129c7f84c92f

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -50,6 +50,8 @@ blazar_manager_plugins:
   - virtual.instance.plugin
   - virtual.floatingip.plugin
 
+blazar_memcached_servers: "{{ memcached_servers }}"
+
 ## Common PIP requirements
 blazar_pip_packages:
   - "git+{{ blazar_git_repo }}@{{ blazar_git_install_branch }}#egg=blazar"
@@ -58,6 +60,8 @@ blazar_pip_packages:
   - pymysql
   - python-blazarclient
   - systemd-python
+  - pymemcache
+  - python-memcached
 
 ## blazar constraints
 blazar_git_constraints:
