Add service policies defenition
In order to allow definition of policies per service, we need to add variables
to service roles, that will be passed to openstack.osa.mq_setup.

Currently this can be handled by leveraging group_vars and overriding `oslomsg_rpc_policies` as a whole, but it's not obvious and
can be non-trivial for some groups which are co-locating multiple services
or in case of metal deployments.

Change-Id: I727fef51851d4da27180761afff563e3fe41fc75

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -165,6 +165,7 @@ blazar_oslomsg_rpc_servers: "{{ oslomsg_rpc_servers | default('127.0.0.1') }}"
 blazar_oslomsg_rpc_port: "{{ oslomsg_rpc_port | default('5672') }}"
 blazar_oslomsg_rpc_use_ssl: "{{ oslomsg_rpc_use_ssl | default(False) }}"
 blazar_oslomsg_rpc_userid: blazar
+blazar_oslomsg_rpc_policies: []
 # vhost name depends on value of oslomsg_rabbit_quorum_queues. In case quorum queues
 # are not used - vhost name will be prefixed with leading `/`.
 blazar_oslomsg_rpc_vhost:
@@ -187,6 +188,7 @@ blazar_oslomsg_notify_vhost: "{{ blazar_oslomsg_rpc_vhost }}"
 blazar_oslomsg_notify_password: "{{ blazar_oslomsg_rpc_password }}"
 blazar_oslomsg_notify_ssl_version: "{{ oslomsg_notify_ssl_version | default('TLSv1_2') }}"
 blazar_oslomsg_notify_ssl_ca_file: "{{ oslomsg_notify_ssl_ca_file | default('') }}"
+blazar_oslomsg_notify_policies: []
 
 ## RabbitMQ integration
 blazar_oslomsg_rabbit_quorum_queues: "{{ oslomsg_rabbit_quorum_queues | default(True) }}"
