Define lock directory for oslo_concurrency
Change-Id: I79c12449542609381460a7a2a8153da3261bbfd3

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -149,7 +149,7 @@
     systemd_group_name: "{{ blazar_system_group_name }}"
     systemd_tempd_prefix: openstack
     systemd_slice_name: blazar
-    systemd_lock_path: /var/lock/blazar
+    systemd_lock_dir: /run/lock/
     systemd_service_cpu_accounting: true
     systemd_service_block_io_accounting: true
     systemd_service_memory_accounting: true
