Add tag to enable targeting of post-install config elements only
<service>-config tags are quite broad and have a long execution
time. Where you only need to modify a service's '.conf' file and
similar it is useful to have a quicker method to do so.

Change-Id: I34789c5aeeaa9fd4a61536edc35099f8c6b3852c

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -123,6 +123,7 @@
   import_tasks: blazar_post_install.yml
   tags:
     - blazar-config
+    - post-install
 
 - name: Importing blazar_db_setup tasks
   import_tasks: blazar_db_setup.yml
