--- a/vars/main.yml
+++ b/vars/main.yml
@@ -16,7 +16,7 @@
 _blazar_is_first_play_host: >-
   {{
     (blazar_services['blazar-api']['group'] in group_names and
-      inventory_hostname == ((groups[blazar_services['blazar-api']['group']] | intersect(ansible_play_hosts)) | list)[0]) | bool
+      inventory_hostname == ((groups[blazar_services['blazar-api']['group']] | select('in', ansible_play_hosts)) | list)[0]) | bool
   }}
 
 _blazar_oslomsg_rpc_vhost_conf: >-
