--- a/tasks/blazar_db_setup.yml
+++ b/tasks/blazar_db_setup.yml
@@ -18,6 +18,6 @@
   command: >
     {{ blazar_bin }}/blazar-db-manage
     --config-file {{ blazar_etc_dir }}/blazar.conf upgrade head
-  become: yes
+  become: true
   become_user: "{{ blazar_system_user_name }}"
-  changed_when: False
+  changed_when: false
