Auto-fix usage of modules via FQCN
Since ansible-core 2.10 it is recommended to use modules via FQCN
In order to align with recommendation, we perform migration
by applying suggestions made by `ansible-lint --fix=fqcn`

Change-Id: I37abe88590e9a74f0ef19a5c4c850befb70a7a2c

--- a/tasks/blazar_db_setup.yml
+++ b/tasks/blazar_db_setup.yml
@@ -15,7 +15,7 @@
 # limitations under the License.
 
 - name: Create blazar database schema
-  command: >
+  ansible.builtin.command: >
     {{ blazar_bin }}/blazar-db-manage
     --config-file {{ blazar_etc_dir }}/blazar.conf upgrade head
   become: true
