--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -15,7 +15,7 @@
 # limitations under the License.
 
 - name: Restart blazar services
-  systemd:
+  ansible.builtin.systemd:
     name: "{{ item.service_name }}"
     state: restarted
   with_items: "{{ filtered_blazar_services }}"
